# integer-conversion

./: .clang-format  CMakeLists.txt  README.md
inc/: integer_conversion.h
src/: integer_conversion.c
test/: test_integer_conversion.c  test_integer_conversion_universal.c
